[package]
name = "grove-matrix-led-my9221-rs"
version = "0.2.0"
authors = ["pyaillet"]
edition = "2021"
categories = ["embedded", "hardware-support"]
description = "Rust driver for Grove RGB Matrix Led with my-9221 Driver"
repository = "https://github.com/pyaillet/grove-matrix-led-my9221-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
embedded-hal = "^0.2.6"

[features]
default = []

std = []

[[examples]]
path = "examples/stm32f3-discovery/"

[dev-dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.15"
stm32f3xx-hal = { version = "0.8.2", features = [ "stm32f303xc" ] }
panic-itm = "0.4.2"

